--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "description": "Convert Google Places Opening Hours Periods into the OpeningHoursSpecification format",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "repository": "https://github.com/stayradiated/google-places-periods-parser",
   "author": "George Czabania",
   "license": "MIT",
