chore(build): target ES5

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "George Czabania",
   "license": "MIT",
   "scripts": {
-    "build": "pkg-build",
+    "build": "pkg-build --target es5",
     "test": "pkg-test",
     "tidy": "pkg-tidy"
   },
